Remove .github folder and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ $RECYCLE.BIN/
 # Setup instructions (optional - remove if you want to include it)
 GITHUB_SETUP.md
 
+# GitHub workflows
+.github/
+
